--- a/proyectosSpring/15-spring-boot-rest-crud-employee-with-spring-data-rest/src/main/resources/application.properties
+++ b/proyectosSpring/15-spring-boot-rest-crud-employee-with-spring-data-rest/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=springstudent
 # Spring Data REST properties
 #
 spring.data.rest.base-path=/magic-api
+
+server.port = 7777
