--- a/proyectosSpring/SpringMongoDB-main/src/main/resources/application.properties
+++ b/proyectosSpring/SpringMongoDB-main/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://mrugerio:ogPp0pnlLkXn06N6@clusteracademy.qxd0h.mongodb.net/?retryWrites=true&w=majority&appName=ClusterAcademy
-
+spring.data.mongodb.uri=mongodb+srv://mrugerio:wL6XkDZbMX3ZtmaY@telusko.9yjfs.mongodb.net/?retryWrites=true&w=majority&appName=telusko
 spring.data.mongodb.database=telusko
