--- a/proyectosSpring/springboot-mongodb-academy/src/main/resources/application.properties
+++ b/proyectosSpring/springboot-mongodb-academy/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.data.mongodb.username=admin
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 server.port = 8000
 
